--- a/source/_assets/css/main.css
+++ b/source/_assets/css/main.css
@@ -4,10 +4,19 @@
 
 nav ul > li::after {
     content: "/";
+    color: #ffffff;
 }
 
 nav ul > li:last-child::after {
     content: "";
+}
+
+.group:hover .group-hover\:block {
+    display: block !important;
+}
+
+body > header {
+    background: url(/assets/images/dropdown_bg.png) center top repeat;
 }
 
 div.footer-wrapper {
