--- a/source/_assets/css/main.css
+++ b/source/_assets/css/main.css
@@ -28,6 +28,10 @@ body > header {
     @apply text-base text-gray-700 mb-5;
 }
 
+.content > ul {
+    @apply list-disc list-inside;
+}
+
 footer.footer {
     background: url(/assets/images/footer_arrow.png) center top no-repeat,url(/assets/images/dropdown_bg.png) center top repeat;
 }
