--- a/source/_assets/css/main.css
+++ b/source/_assets/css/main.css
@@ -19,6 +19,10 @@ body > header {
     background: url(/assets/images/dropdown_bg.png) center top repeat;
 }
 
+.content > h2 {
+    @apply text-center mb-4 font-bold;
+}
+
 .content > pre {
     overflow: auto;
     @apply mb-5 bg-gray-800 text-white p-4;
@@ -26,6 +30,10 @@ body > header {
 
 .content > p {
     @apply text-base text-gray-700 mb-5;
+}
+
+.content > hr {
+    @apply my-5;
 }
 
 .content > ul {
