Added new article for LetsEncrypt certificate deletion. Modified date output again.

--- a/source/_assets/css/main.css
+++ b/source/_assets/css/main.css
@@ -23,6 +23,10 @@ body > header {
     @apply text-center mb-4 font-bold;
 }
 
+.content > h3 {
+    @apply mb-4 font-bold;
+}
+
 .content > pre {
     overflow: auto;
     @apply mb-5 bg-gray-800 text-white p-4;
