Fixed blog images being served via sirv. CSS update to add some space below images.

--- a/source/_assets/css/main.css
+++ b/source/_assets/css/main.css
@@ -36,6 +36,10 @@ body > header {
     @apply text-base text-gray-700 mb-5;
 }
 
+.content > img {
+    @apply mb-5;
+}
+
 .content > hr {
     @apply my-5;
 }
